<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.RegisterScreen"
    android:background="@color/backgroundColor">
    <LinearLayout
        android:id="@+id/navigationBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        android:weightSum="1">
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:layout_height="@dimen/_48sdp"
            android:src="@drawable/ic_baseline_arrow_back"
            app:tint="@color/logoColor2"
            android:layout_marginTop="@dimen/_8sdp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:textSize="@dimen/_36ssp"
            android:text="@string/textRegister"
            android:textColor="@color/textColor"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_2sdp"/>

    </LinearLayout>
    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_coffeelover"
        android:textSize="@dimen/_20ssp"
        android:textColor="@color/textColor"
        android:layout_marginTop="@dimen/_30sdp"
        app:layout_constraintTop_toBottomOf="@id/navigationBar"
        android:gravity="center"/>
    <LinearLayout
        android:id="@+id/registerForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/welcome"
        android:layout_marginTop="@dimen/_32sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_16sdp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            android:textSize="@dimen/_18sdp"
            android:text="@string/username"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/tv_enterusername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/box_edittext8"
            android:hint="@string/enter_your_username"
            android:minHeight="48dp"
            android:padding="@dimen/_8sdp"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColor1" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            android:textSize="@dimen/_18sdp"
            android:text="@string/phone_number"
            android:layout_marginTop="@dimen/_12sdp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/tv_enterphonenumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/box_edittext8"
            android:hint="@string/enter_your_phone_number"
            android:minHeight="48dp"
            android:padding="@dimen/_8sdp"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColor1" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            android:textSize="@dimen/_18sdp"
            android:text="@string/password"
            android:layout_marginTop="@dimen/_12sdp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/tv_enterpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/box_edittext8"
            android:hint="@string/enter_your_password"
            android:minHeight="48dp"
            android:padding="@dimen/_8sdp"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColor1"
            android:inputType="textPassword"
            android:drawableEnd="@drawable/ic_baseline_remove_red_eye_24"
            android:drawableTint="@color/textColor"
            />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_register"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_48sdp"
        android:gravity="center"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerForm"
        android:backgroundTint="@color/buttonColor"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/_12sdp"
        app:cornerRadius="@dimen/_24sdp"
        android:paddingStart="@dimen/_24sdp"
        android:paddingEnd="@dimen/_24sdp"
        android:textAllCaps="false"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/bt_register"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_account"
            android:layout_marginEnd="@dimen/_2sdp"
            android:textSize="@dimen/_13ssp"
            android:gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            android:textColor="@color/textColor"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginBottom="@dimen/_24sdp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="1">
            <View
                android:layout_width="0dp"
                android:layout_weight="0.35"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_height="1dp"
                android:background="@color/textColor1" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:textSize="@dimen/_14ssp"
                android:text="@string/or"
                android:textColor="@color/textColor1"/>
            <View
                android:layout_width="0dp"
                android:layout_weight="0.35"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_height="1dp"
                android:background="@color/textColor1" />

        </LinearLayout>
        <TextView
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_with_social_media"
            android:textSize="@dimen/_10ssp"
            android:textColor="@color/textColor"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="@dimen/_4sdp">
            <ImageView
                android:layout_width="@dimen/_48sdp"
                android:layout_height="@dimen/_48sdp"
                android:src="@drawable/icons8_google_plus"
                app:tint="@color/googleplusColor"/>
            <ImageView
                android:layout_width="@dimen/_48sdp"
                android:layout_height="@dimen/_48sdp"
                android:src="@drawable/icons8_facebook"
                app:tint="@color/facebookColor"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"/>
            <ImageView
                android:layout_width="@dimen/_48sdp"
                android:layout_height="@dimen/_48sdp"
                android:src="@drawable/icons8_twitter"
                app:tint="@color/twitterColor"/>

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>