<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.StartScreen"
    android:background="@color/backgroundColor">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coffeelover"
        android:textSize="@dimen/_36ssp"
        android:layout_marginTop="@dimen/_70sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startline"
        android:textSize="@dimen/_24ssp"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/_100sdp"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_register"
        android:layout_width="@dimen/_110sdp"
        android:layout_height="@dimen/_48sdp"
        android:text="@string/register"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtitle"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_24sdp"
        app:cornerRadius="@dimen/_24sdp"
        app:backgroundTint="@color/buttonColor"
        android:textAllCaps="false"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_login"
        android:layout_width="@dimen/_110sdp"
        android:layout_height="@dimen/_48sdp"
        android:text="@string/log_in"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintTop_toBottomOf="@id/subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_24sdp"
        app:cornerRadius="@dimen/_24sdp"
        android:textColor="@color/textColor"
        app:backgroundTint="@color/backgroundColor"
        app:strokeWidth="@dimen/_3sdp"
        app:strokeColor="@color/buttonColor"
        android:textAllCaps="false"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginBottom="@dimen/_24sdp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="1">
            <View
                android:layout_width="0dp"
                android:layout_weight="0.35"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_height="1dp"
                android:background="@color/textColor1" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:textSize="@dimen/_14ssp"
                android:text="@string/or"
                android:textColor="@color/textColor1"/>
            <View
                android:layout_width="0dp"
                android:layout_weight="0.35"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_height="1dp"
                android:background="@color/textColor1" />

        </LinearLayout>
        <TextView
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_with_social_media"
            android:textSize="@dimen/_10ssp"
            android:textColor="@color/textColor"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="@dimen/_4sdp">
            <ImageView
                android:layout_width="@dimen/_48sdp"
                android:layout_height="@dimen/_48sdp"
                android:src="@drawable/icons8_google"/>
            <ImageView
                android:layout_width="@dimen/_48sdp"
                android:layout_height="@dimen/_48sdp"
                android:src="@drawable/icons8_facebook"
                app:tint="@color/facebookColor"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"/>
            <ImageView
                android:layout_width="@dimen/_48sdp"
                android:layout_height="@dimen/_48sdp"
                android:src="@drawable/icons8_twitter"
                app:tint="@color/twitterColor"/>

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>